# wallet

./: .gitignore  .gitmodules  Containerfile  FUNDING.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  talogo.xcf
app/: BIP322Share.md  CMakeLists.txt  app-release-xiaomi.apk  app-release.apk  build.gradle  build.gradle.kts  local.properties  manifest-merger-release-report.txt  proguard-rules.pro  proguard-rules.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: checkpoints-testnet.txt  checkpoints.txt  graph.snapshot-mainnet.zlib  servers_mainnet.json  servers_testnet.json
app/src/main/cpp/libwally-core/: CMakeLists.txt
app/src/main/cpp/secp256k1/: .gitignore  configure.ac
app/src/main/java/immortan/: Channel.scala  ChannelHosted.scala  ChannelHostedData.scala  ChannelMaster.scala  ChannelNormal.scala  CommsTower.scala  ConnectionProvider.scala  HCErrorCodes.scala  LNParams.scala  LightningNodeKeys.scala  LoggingSupervisor.scala  PathFinder.scala  PaymentInfo.scala  SyncMaster.scala  TransportHandler.scala  WalletParams.scala
app/src/main/res/drawable/: apptheme_edit_text_holo_dark.xml  apptheme_edit_text_holo_light.xml  apptheme_search_view_holo.xml  baseline_add_24.xml  baseline_alternate_email_18.xml  baseline_arrow_downward_18.xml  baseline_arrow_upward_18.xml  baseline_block_24.xml  baseline_close_20_24.xml  baseline_close_24.xml  baseline_content_copy_24.xml  baseline_content_paste_24.xml  baseline_create_24.xml  baseline_done_24.xml  baseline_feedback_24.xml  baseline_hourglass_empty_24.xml  baseline_label_20_24.xml  baseline_label_24.xml  baseline_language_18.xml  baseline_more_horiz_24.xml  baseline_perm_identity_18.xml  baseline_question_24.xml  baseline_settings_24.xml  baseline_share_24.xml  baseline_storefront_24.xml  baseline_swap_horiz_18.xml  border_black.xml  border_blue.xml  border_card_hardware_on.xml  border_card_mixed_on.xml  border_card_signing_on.xml  border_gray.xml  border_green.xml  border_red.xml  border_yellow.xml  bottom_navigation_item_background.xml  bottom_navigation_notification_background.xml  button_toggle_selector.xml  expand_more_24px.xml  flashlight_off.xml  (+25 more)
app/src/main/res/drawable-hdpi/: Thumbs.db
app/src/main/res/drawable-mdpi/: Thumbs.db
app/src/main/res/drawable-xhdpi/: Thumbs.db
app/src/main/res/drawable-xxhdpi/: Thumbs.db
app/src/main/res/layout/: activity_adrs.xml  activity_chan.xml  activity_coin_control.xml  activity_create.xml  activity_emergency.xml  activity_hub.xml  activity_ln_pass.xml  activity_ln_txs.xml  activity_main.xml  activity_qr_addresses.xml  activity_qr_chain_addresses.xml  activity_qr_lightning_invoice.xml  activity_qr_signature.xml  (+62 more)
(+647 files in other folders)
